--- a/index.html
+++ b/index.html
@@ -4,148 +4,41 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <title>Pour mon Imane ❤️</title>
-    <link href="https://fonts.googleapis.com/css2?family=Amiri:ital,wght@0,400;0,700;1,400&family=Aref+Ruqaa:wght@400;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Amiri&display=swap" rel="stylesheet">
     <style>
-        body {
-            margin: 0;
-            padding: 0;
-            background: #0a0a0a;
-            height: 100vh;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            overflow: hidden;
-            font-family: 'Georgia', serif;
-        }
-
-        .glow-circle {
-            position: absolute;
-            width: 350px;
-            height: 350px;
-            background: radial-gradient(circle, rgba(255, 20, 147, 0.25) 0%, transparent 70%);
-            border-radius: 50%;
-            filter: blur(50px);
-            animation: pulseGlow 4s infinite;
-        }
-
-        .content {
-            text-align: center;
-            z-index: 100;
-            width: 95%;
-            pointer-events: none;
-        }
-
-        h1 {
-            color: #fff;
-            font-size: 1.8rem;
-            letter-spacing: 4px;
-            text-shadow: 0 0 10px rgba(255, 255, 255, 0.5);
-            margin: 0;
-            font-weight: 300;
-        }
-
-        .imane-name {
-            display: block;
-            font-size: 5rem;
-            font-weight: bold;
-            background: linear-gradient(to right, #ffb6c1, #ff1493, #ffb6c1);
-            -webkit-background-clip: text;
-            -webkit-text-fill-color: transparent;
-            margin: 10px 0;
-            animation: float 3s ease-in-out infinite;
-        }
-
-        /* Style amélioré pour la phrase en Arabe */
-        .arabic-phrase {
-            display: block;
-            margin-top: 25px;
-            color: #fce4ec;
-            font-size: 1.9rem; /* Plus grand pour apprécier la calligraphie */
-            direction: rtl;
-            line-height: 1.6;
-            font-family: 'Amiri', serif; /* Police calligraphique */
-            text-shadow: 0 2px 10px rgba(255, 20, 147, 0.4);
-            animation: fadeIn 3s ease-in;
-        }
-
-        .heart-icon {
-            color: #ff1493;
-            display: inline-block;
-            animation: heartbeat 1.2s infinite;
-            font-size: 1.5rem;
-            margin-right: 10px;
-        }
-
-        /* Pétales de fleurs réalistes */
-        .petal {
-            position: absolute;
-            background: linear-gradient(135deg, #ffc0cb, #ff69b4);
-            border-radius: 150% 0 150% 0;
-            pointer-events: none;
-            z-index: 1;
-            filter: drop-shadow(0 0 5px rgba(255, 105, 180, 0.4));
-            animation: fallAndSpin linear forwards;
-        }
-
-        @keyframes fallAndSpin {
-            0% { transform: translateY(-10vh) rotate(0deg) rotateX(0deg); opacity: 0; }
-            15% { opacity: 1; }
-            100% { transform: translateY(110vh) rotate(720deg) rotateX(360deg); opacity: 0; }
-        }
-
-        @keyframes float {
-            0%, 100% { transform: translateY(0); }
-            50% { transform: translateY(-15px); }
-        }
-
-        @keyframes pulseGlow {
-            0%, 100% { transform: scale(1); opacity: 0.4; }
-            50% { transform: scale(1.3); opacity: 0.6; }
-        }
-
-        @keyframes heartbeat {
-            0% { transform: scale(1); }
-            15% { transform: scale(1.3); }
-            30% { transform: scale(1); }
-            45% { transform: scale(1.15); }
-            60% { transform: scale(1); }
-        }
-
-        @keyframes fadeIn {
-            from { opacity: 0; transform: translateY(10px); }
-            to { opacity: 1; transform: translateY(0); }
-        }
+        body { margin: 0; padding: 0; background: #0a0a0a; height: 100vh; display: flex; justify-content: center; align-items: center; overflow: hidden; font-family: 'Georgia', serif; position: fixed; width: 100%; }
+        .glow-circle { position: absolute; width: 300px; height: 300px; background: radial-gradient(circle, rgba(255, 20, 147, 0.3) 0%, transparent 70%); border-radius: 50%; filter: blur(50px); animation: pulseGlow 4s infinite; }
+        .content { text-align: center; z-index: 100; width: 95%; pointer-events: none; }
+        .imane-name { display: block; font-size: clamp(3.5rem, 15vw, 5rem); font-weight: bold; background: linear-gradient(to right, #ffb6c1, #ff1493, #ffb6c1); -webkit-background-clip: text; -webkit-text-fill-color: transparent; margin: 5px 0; animation: float 3s ease-in-out infinite; }
+        .arabic-phrase { display: block; margin-top: 20px; color: #fce4ec; font-size: clamp(1.3rem, 5vw, 1.8rem); direction: rtl; font-family: 'Amiri', serif; text-shadow: 0 2px 10px rgba(255, 20, 147, 0.4); }
+        .heart-icon { color: #ff1493; display: inline-block; animation: heartbeat 1.2s infinite; }
+        .petal { position: absolute; background: linear-gradient(135deg, #ffc0cb, #ff69b4); border-radius: 150% 0 150% 0; pointer-events: none; animation: fallAndSpin linear forwards; }
+        @keyframes fallAndSpin { 0% { transform: translateY(-10vh) rotate(0); opacity: 0; } 15% { opacity: 1; } 100% { transform: translateY(110vh) rotate(720deg); opacity: 0; } }
+        @keyframes heartbeat { 0%, 100% { transform: scale(1); } 50% { transform: scale(1.3); } }
+        @keyframes pulseGlow { 0%, 100% { transform: scale(1); opacity: 0.4; } 50% { transform: scale(1.3); opacity: 0.6; } }
+        @keyframes float { 0%, 100% { transform: translateY(0); } 50% { transform: translateY(-15px); } }
     </style>
 </head>
 <body>
-
     <div class="glow-circle"></div>
-
     <div class="content">
-        <h1>GOOD MORNING</h1>
+        <h1 style="color:white; font-size:1.2rem; letter-spacing:3px; font-weight:300;">GOOD MORNING</h1>
         <span class="imane-name">Imane</span>
-        <div class="arabic-phrase">
-            حين تفتحين عينيكِ، يستيقظ قلبي قبلكِ ويبتسم <span class="heart-icon">❤️</span>
-        </div>
+        <div class="arabic-phrase">حين تفتحين عينيكِ، يستيقظ قلبي قبلكِ ويبتسم <span class="heart-icon">❤️</span></div>
     </div>
-
     <script>
         function createPetal() {
             const petal = document.createElement('div');
             petal.className = 'petal';
-            const size = Math.random() * 18 + 12;
-            petal.style.width = size + 'px';
-            petal.style.height = (size + 6) + 'px';
+            const size = Math.random() * 15 + 10;
+            petal.style.width = size + 'px'; petal.style.height = (size + 5) + 'px';
             petal.style.left = Math.random() * 100 + 'vw';
-            
-            const duration = Math.random() * 3 + 5;
+            const duration = Math.random() * 3 + 4;
             petal.style.animationDuration = duration + 's';
-            
             document.body.appendChild(petal);
             setTimeout(() => { petal.remove(); }, duration * 1000);
         }
-
-        setInterval(createPetal, 100);
+        setInterval(createPetal, 120);
     </script>
 </body>
 </html>
